--- a/index.html
+++ b/index.html
@@ -1,18 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rajasekhar Pasupuleti | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-    <h1 hello welcome to dhee coding lab ></h1>
-    <h1 hello welcome to dhee coding lab ></h1>
-    <h1 hello welcome to dhee coding lab ></h1>
-    <h1 hello welcome to dhee coding lab ></h1>
-    <div></div>
-    <div></div>
-    <div></div>
-<script src="app.js"></script>
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">Rajasekhar<span>.</span></div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#internship">Internship</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <a href="#contact" class="btn">Let's Talk</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-text">
+      <h3>Hi, I'm <span class="purple">Rajasekhar Pasupuleti</span></h3>
+      <h2>Aspiring Software Developer</h2>
+      <p>
+        Passionate about Java, SQL, and web technologies. I enjoy solving complex problems
+        and building innovative solutions that make a difference.
+      </p>
+      <div class="cta">
+        <a href="#contact" class="btn">Hire Me</a>
+        <a href="#projects" class="btn-outline">See Projects</a>
+      </div>
+      <div class="social-icons">
+        <a href="http://linkedin.com/in/pasupuletisekhar" target="_blank">LinkedIn</a>
+        <a href="mailto:rajasekharp638@gmail.com">Email</a>
+      </div>
+    </div>
+    <div class="hero-img">
+      <img src="profile.jpg" alt="Rajasekhar's photo" />
+    </div>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>
+      I am a B.Tech student (ECE) at Srinivasa Institute of Technology and Science (2021–2025). 
+      My goal is to become a skilled software developer by leveraging my expertise in Java, 
+      SQL, and full-stack web technologies.
+    </p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="section">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+      <li>Core Java</li>
+      <li>HTML, CSS, JavaScript</li>
+      <li>MySQL, Oracle SQL</li>
+    </ul>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="section">
+    <h2>Projects</h2>
+    <div class="card">
+      <h3>Deepfake Video Detection</h3>
+      <p>
+        Developed a deep learning model using long-distance attention mechanisms. 
+        Achieved 92% accuracy in identifying subtle spatiotemporal inconsistencies 
+        to enhance robustness against realistic deepfakes.
+      </p>
+    </div>
+  </section>
+
+  <!-- Internship Section -->
+  <section id="internship" class="section">
+    <h2>Internship</h2>
+    <div class="card">
+      <h3>Java Full Stack Intern — Dhee Coding Lab</h3>
+      <p>
+        Gained hands-on experience in full stack Java development, 
+        improving my programming and problem-solving skills.
+      </p>
+    </div>
+  </section>
+
+  <!-- Certifications -->
+  <section class="section">
+    <h2>Certifications</h2>
+    <ul>
+      <li>NPTEL Online Certification in Java</li>
+    </ul>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:rajasekharp638@gmail.com">rajasekharp638@gmail.com</a></p>
+    <p>Phone: 9347979522</p>
+    <p><a href="http://linkedin.com/in/pasupuletisekhar" target="_blank">LinkedIn Profile</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Rajasekhar Pasupuleti</p>
+  </footer>
 </body>
 </html>
