--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rajasekhar Pasupuleti | Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="r.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -112,3 +112,4 @@
   </footer>
 </body>
 </html>
+
